<resources>
    <string name="app_name">CST2335_FinalProject</string>
    <string name="oc_transpo">OC Transpo Bus Route</string>

    <!--CBC News-->
    <string name="cbc_search">Search</string>
    <string name="cbc_news">CBC News Reader</string>
    <string name="cbc_searchErrorMessage">No Search Results found</string>
    <string name="cbc_searchErrorTitle">Error</string>
    <string name="cbc_searchErrorClosed">Dialog box Closed</string>
    <string name="cbc_searchErrorOk">Ok</string>
    <string name="cbc_snackBarMessage">You are on CBC News</string>
    <!--CBC News-->

    <string name="food_nutrition">Food Nutrition Database</string>
    <string name="movie_information">Movie Information</string>
    <string name="FNSearch"> Search Food</string>
    <string name="FNInputText">Type to search food</string>
    <string name="FNdialog_message">Are you sure?</string>
    <string name="FNdialog_title">Exit</string>
    <string name="FNok">yes</string>
    <string name="FNcancel">Cancel</string>
    <string name="FNgoBack">Go back to Home</string>
    <string name="fnfavouriteButton">Add to Favourites</string>
    <string name="FNRefresh">Refresh History</string>
    <string name="FNPageText">A fruit on next page FINALLY!!!</string>
    <string name="OC_App_Name">"MY OC"</string>
    <string name="OC_start">Starting</string>
    <string name="OC_Search_Route">Enter the Stop</string>
    <string name="OC_Search_Stop">Enter the Bus Number</string>
    <string name="OC_Search_Button">Search</string>
    <string name="help">Help</string>
    <string name="databaseInfo">Database Summary</string>
    <string name="OK">OK</string>
    <string name="Show">Dialog Showed</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
