<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
<item   android:id="@+id/ocItem"
        app:showAsAction="always"
        android:icon="@drawable/ic_route"
        android:title="@string/oc_transpo">

</item>
    <item   android:id="@+id/ocFN"
        app:showAsAction="always"
        android:icon="@drawable/ic_food"
        android:title="@string/food_nutrition">

    </item>
    <item   android:id="@+id/movieItem"
        app:showAsAction="always"
        android:icon="@drawable/ic_movie"
        android:title="@string/movie_information">

    </item>
    <item   android:id="@+id/cbcItem"
    app:showAsAction="always"
    android:icon="@drawable/ic_news"
    android:title="@string/cbc_news">
    </item>
    <item   android:id="@+id/dialogItem"
        app:showAsAction="always"
        android:icon="@drawable/ic_action_name"
        android:title="@string/databaseInfo">
    </item>
    <item   android:id="@+id/helpItem"
        app:showAsAction="always"
        android:icon="@drawable/ic_help"
        android:title="@string/help">
    </item>
</menu>