<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.gurki.cst2335_finalproject.OC_Transpo.SearchActivity"
    android:orientation="horizontal">

    <LinearLayout
        android:layout_width="147dp"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView

            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:text="@string/OC_Search_Stop" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="47dp"
            android:text="@string/OC_Search_Route" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="248dp"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <EditText
            android:id="@+id/OC_stopEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="number"
            />

        <EditText
            android:id="@+id/OC_routeEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="number"/>
        <Button
            android:id="@+id/OC_searchButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/OC_Search_Button"/>

    </LinearLayout>

</LinearLayout>
