<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:id="@+id/fragment3"
    tools:context="com.example.gurki.cst2335_finalproject.FoodNutritionActivity">
    <android.support.v7.widget.Toolbar
        android:id="@+id/my_toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorButtonNormal"
        android:elevation="4dp"
        app:title="@string/FNTitle"
        app:logo="@drawable/fntitle"
        android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Dark"
        app:navigationIcon="@drawable/fnnavigation"
        />

    <RelativeLayout android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:id="@+id/fragmenttry"/>
    <LinearLayout android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:id="@+id/fragment"
        android:orientation="vertical" >


    <LinearLayout
        android:layout_width="match_parent"
        android:id="@+id/fragment2"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/FNsearchEditText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:hint="@string/FNInputText"
            android:inputType="text"
            android:singleLine="false" />

        <Button
            android:id="@+id/FNsearchButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/FNSearch" />

    </LinearLayout>
    <Button
        android:id="@+id/FNgoBackButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/FNgoBack" />
    <Button
        android:id="@+id/FNRefresh"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/FNRefresh" />

    <ListView
        android:id="@+id/FNListView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:padding="5dp" />

    <ProgressBar
        android:id="@+id/ourProgressBar"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:visibility="invisible" />


</LinearLayout>
</LinearLayout>